@@ -6,6 +6,7 @@ Revision history for Perl extension AnyEvent.
         - added (experiemntal) support for TLS/SSL in AnyEvent::Handle.
         - make condvar->end call ->send as documented.
         - make condvar constructor support the documented cb => argument.
+        - overload condvars so you can use them instead of code references.
         - support more of the POSIX forms instead of a pure dotted quad for
           verbatim ip addresses.
         - AnyEvent::Socket::inet_aton will use AnyEvent::DNS now and not fork anymore.
